--- a/package.json
+++ b/package.json
@@ -3,30 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/moment": "^1.3.8",
-    "@material-ui/core": "^4.2.1",
+    "@apollo/react-hooks": "^3.0.0",
+    "@date-io/moment": "^1.3.9",
+    "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.0",
-    "@types/jest": "24.0.15",
+    "@material-ui/pickers": "^3.2.2",
+    "@types/jest": "^24.0.15",
     "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "apollo-boost": "^0.4.4",
     "clsx": "^1.0.4",
-    "husky": "^3.0.1",
-    "lint-staged": "^9.2.0",
+    "graphql": "^14.4.2",
+    "husky": "^3.0.3",
+    "lint-staged": "^9.2.1",
     "moment": "^2.24.0",
     "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-number-format": "^4.0.8",
-    "react-scripts": "3.0.1",
+    "react": "^16.9.0",
+    "react-apollo": "^2.5.8",
+    "react-dom": "^16.9.0",
+    "react-number-format": "^4.2.0",
+    "react-scripts": "^3.0.1",
     "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generateSchemaTypes": "npx apollo client:codegen --target typescript --outputFlat ./src/generated"
   },
   "eslintConfig": {
     "extends": "react-app"
