--- a/package.json
+++ b/package.json
@@ -3,28 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.0.0",
-    "@date-io/moment": "^1.3.9",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.2",
-    "@types/jest": "^24.0.15",
-    "@types/node": "12.0.12",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@apollo/react-hooks": "^3.1.1",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
     "apollo-boost": "^0.4.4",
     "clsx": "^1.0.4",
-    "graphql": "^14.4.2",
-    "husky": "^3.0.3",
-    "lint-staged": "^9.2.1",
+    "graphql": "^14.5.7",
     "moment": "^2.24.0",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
-    "react-apollo": "^2.5.8",
     "react-dom": "^16.9.0",
-    "react-number-format": "^4.2.0",
-    "react-scripts": "^3.0.1",
-    "typescript": "3.5.3"
+    "react-number-format": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,5 +49,15 @@
       "prettier --single-quote --write",
       "git add"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.5",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.3.0",
+    "react-scripts": "^3.1.2",
+    "typescript": "^3.6.3"
   }
 }
