--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,18 @@ steps:
 - script: npm install
   displayName: 'npm install'
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'jacksondr5'
+    scannerMode: 'CLI'
+    configMode: 'file'
+
 - script: npm run build
   displayName: 'Build Project'
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
