--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: npm install
-  displayName: 'npm install'
+- script: npm ci
+  displayName: 'Install dependencies'
 
 - task: SonarCloudPrepare@1
   inputs:
